# cursor

./: .gitignore  CMakeLists.txt  CursorConfig.cmake.in  README.md
include/: cursor.hpp
include/cursor/: color.hpp  core.hpp  cursor.hpp  movement.hpp  style.hpp
src/: color.cpp  core.cpp  cursor.cpp  movement.cpp  style.cpp
test/: CMakeLists.txt  main.cpp
